# gol

./: CMakeLists.txt  README.md  life.cpp
